# autodev-repair-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
autodev/: __init__.py  graph.py  main.py  state.py
autodev/context/: __init__.py  flaky.py  llm.py  prompts.py  retriever.py
autodev/github/: __init__.py  client.py  pr.py  pr_body.py
autodev/metrics/: __init__.py  logger.py
autodev/patching/: __init__.py  apply.py  rollback.py
autodev/policy/: __init__.py  diff_guard.py  rules.py
autodev/sandbox/: __init__.py  docker_runner.py
docker/: runner.Dockerfile
docs/: ARCHITECTURE.md  POLICY.md  USAGE.md
tests/: __init__.py  test_policy_guards.py
